# pitstop

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: API.md  design.md
schedules/: forks.yaml  schema.py
schedules/eips/: 1014.yaml  1052.yaml  1108.yaml  1153.yaml  1344.yaml  140.yaml  145.yaml  150.yaml  160.yaml  1884.yaml  196.yaml  197.yaml  2028.yaml  211.yaml  214.yaml  2200.yaml  2537.yaml  2565.yaml  2780.yaml  2929.yaml  2930.yaml  3198.yaml  3529.yaml  3860.yaml  4844.yaml  7623.yaml  7702.yaml  7883.yaml  7904.yaml  7939.yaml  7951.yaml  7976.yaml  7981.yaml  8038.yaml  frontier.yaml
scripts/: verify_forks.sh
src/cli/: __init__.py  cli.py
src/core/: comparator.py  config.py  loader.py  resolver.py  verifier.py
src/generators/: __init__.py  base.py  erigon.py  geth.py  nethermind.py
src/models/: schema.py
src/pitstop/core/: __init__.py
src/pitstop/generators/: __init__.py
src/schedules/: __init__.py  prague.yaml
src/templates/: __init__.py
src/templates/erigon/: protocol.go.jinja2
src/templates/geth/: __init__.py  gas.go.jinja2  protocol_params.go.jinja2
src/templates/nethermind/: GasCostOf.cs.jinja2
tests/: test_cli.py  test_comparator.py  test_generators.py  test_loader.py  test_verifier.py
